--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,17 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This extension of the Netzke tutorial shows some of the UI issues discovered with Netzke
+and ExtJS.
 
-Things you may want to cover:
+## Requirements
+* Ruby ~> 1.9.3
+* Rails ~> 4.2.0
+* Netzke ~> 0.11.0
+* ExtJS = 4.2.1
 
-* Ruby version
+## Installation
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Clone this repo to a local repo
+Have ExtJS and the icon library available
+Setup the symlink for public/extjs
+Optionally setup a symlink for public/images/icons
